@@ -1,6 +1,7 @@
 2010-09-23	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* src/compare_db.c:
 	  - removed unused functions (find_line_match, init_rxlst, eat_files_indir)
+	  - compare ignorelist/forced_attrs with DB_ATTR_UNDEF instead of -1
 
 2010-09-17	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* src/compare_db.c: fixed compiler warning if WITH_AUDIT is not defined
